--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/style.css?v=67413075ad1d3c9670d5e303692c52e900122d24">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4079913538962019"
+     crossorigin="anonymous"></script>
     <style>
         .link{
             font-size: 16px;
